<resources>
    <string name="app_name">ADviser</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="favoritos">Favoritos</string>
    <string name="mapa">Mapa</string>
    <string name="preferencias">Preferencias</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="ajustes">Ajustes</string>
    <string name="opciones">Opciones</string>
</resources>
