<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favoritos"
            android:icon="@drawable/ic_menu_preferences"
            android:title="@string/favoritos" />
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/mapa" />
        <item
            android:id="@+id/nav_preferences"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/preferencias" />
    </group>

    <item android:title="@string/opciones">
        <menu>
            <item
                android:id="@+id/nav_notificaciones"
                android:icon="@drawable/ic_menu_notifications"
                android:title="@string/notificaciones" />
            <item
                android:id="@+id/nav_ajustes"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/ajustes" />
        </menu>
    </item>

</menu>
